<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.whitecaps.LoginMgr">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center">


    <ImageView
        android:id="@+id/logoimg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/logo"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="140dp"
        tools:layout_editor_absoluteY="129dp"
        tools:layout_editor_absoluteX="117dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:id="@+id/textInputLayout"
        >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/editText_user"
        android:layout_width="254dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="Email"
        android:layout_marginLeft="60dp"
        android:inputType="textEmailAddress"
        app:layout_constraintHorizontal_bias="0.587"
        tools:layout_editor_absoluteY="200dp" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="370dp"
        android:background="@color/colorPrimary"
        android:text="LogIn"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintVertical_bias="0.111"
        android:layout_alignRight="@+id/textInputLayout"
        android:layout_alignEnd="@+id/textInputLayout" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="270dp"
        app:passwordToggleDrawable="@drawable/icon_selector"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_password"
            android:layout_width="254dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            app:layout_constraintHorizontal_bias="0.587"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_user" />

    </android.support.design.widget.TextInputLayout>
    <!--
        <Button
            android:id="@+id/button"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorPrimary"
            android:text="View"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.255"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.111" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="Forgot Password? Contact Admin"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />-->

</RelativeLayout>
</android.support.constraint.ConstraintLayout>
